# iio-oscilloscope

./: .gitignore  .travis.yml  AD5628_1.glade  AD7303.glade  CMakeLists.txt  Makefile  NOTE_FOR_DEVELOPERS.txt  PmodDA4.glade  README  README.md  ad6676.glade  ad9371.glade  ad9371_adv.glade  ad9739a.glade  adi-osc-legacy.desktop  adi-osc.desktop  adi-osc.desktop.cmakein  adrv9009.glade  adrv9009_adv.glade  appveyor.yml  azure-pipelines.yml  backtrace.h  cmake_uninstall.cmake.in  cn0357.glade  compat.h  config.h  config.h.cmakein  core  daq2.glade  datatypes.c  datatypes.h  debug.glade  dialogs.c  dmm.glade  eeprom.c  eeprom.h  fmcomms1.c  fmcomms1.glade  fmcomms1.h  fmcomms11.glade  (+42 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-deb-ubuntu-20.04.yml  build-deb-ubuntu-22.04.yml  buildflatpak.yml  buildmingw.yml
CI/appveyor/: build.sh  build.sh.inc
CI/azure/: build_osc_arm.sh  build_osc_darwin.sh  build_osc_ubuntu.sh  ci-ubuntu.sh
CI/docker/: Dockerfile  build_mingw.sh  inside_docker.sh  install_prep.sh
CI/flatpak/: app.yml
CI/travis/: before_install_darwin  before_install_lib.sh  before_install_linux  lib.sh  make  make_darwin  make_linux  post_build_checks  pre_build_checks
cJSON/: cJSON.c  cJSON.h
cmake/: LinuxPackaging.cmake
debian/: .gitignore  adi_update_tools.sh  changelog  control  copyright  iio-osc.desktop  iio-osc.install  rules
dev-tools/: fixup-all-glades.sh  fixup-comboboxtext.pl  fixup-gtk3-glade.sh
docker/: Dockerfile  build_mingw.sh  dockerignore.sh  inside_docker.sh  install_prep.sh
filters/: 61_44_28MHz.ftr  ATSC_10M72Hz.ftr  FIR_BPF_64_1.txt  GSM.ftr  LTE10_MHz.ftr  LTE15_MHz.ftr  LTE1p4_MHz.ftr  LTE20_MHz.ftr  LTE3_MHz.ftr  LTE5_MHz.ftr  UMTS.ftr
filters/ad9081/: QuadMxFE_DualReal_CH0_3.2GHz.cfg  QuadMxFE_DualReal_CH0and1_3.21GHz.cfg  QuadMxFE_DualReal_CH10and11_3.21GHz.cfg  QuadMxFE_DualReal_CH12and13_3.21GHz.cfg  QuadMxFE_DualReal_CH14and15_3.21GHz.cfg  QuadMxFE_DualReal_CH1_3.2GHz.cfg  QuadMxFE_DualReal_CH2_3.2GHz.cfg  QuadMxFE_DualReal_CH2and3_3.21GHz.cfg  QuadMxFE_DualReal_CH3_3.2GHz.cfg  QuadMxFE_DualReal_CH4_3.2GHz.cfg  QuadMxFE_DualReal_CH4and5_3.21GHz.cfg  QuadMxFE_DualReal_CH5_3.2GHz.cfg  QuadMxFE_DualReal_CH6_3.2GHz.cfg  QuadMxFE_DualReal_CH6and7_3.21GHz.cfg  QuadMxFE_DualReal_CH7_3.2GHz.cfg  QuadMxFE_DualReal_CH8and9_3.21GHz.cfg  ad9081_pfir_DualReal.cfg  ad9081_pfir_FullComplex.cfg  ad9081_pfir_Matrix.cfg  ad9081_pfir_OFF.cfg  ad9081_pfir_SingleInphase.cfg
filters/adrv9002/: lte_10_lvds_nco_api_48_26_4.json  lte_10_lvds_nco_api_49_0_5.json  lte_20_lvds_api_39_0_7.json  lte_20_lvds_api_48_26_4.json  lte_20_lvds_api_48_42_0.json  lte_20_lvds_api_48_49_2.json  lte_20_lvds_api_48_8_7.json  lte_20_lvds_api_49_0_5.json  lte_20_lvds_api_68_0_6.json  lte_20_lvds_api_68_10_1.json  lte_20_lvds_api_68_5_0.json  lte_40_lvds_api_39_0_7.json  lte_40_lvds_api_48_26_4.json  lte_40_lvds_api_48_42_0.json  lte_40_lvds_api_48_49_2.json  lte_40_lvds_api_48_8_7.json  lte_40_lvds_api_49_0_5.json  lte_40_lvds_api_68_0_6.json  lte_40_lvds_api_68_5_0.json  lte_40_lvds_api_68_8_1.json  lte_5_cmos_api_48_26_4.json  lte_5_cmos_api_48_42_0.json  lte_5_cmos_api_48_49_2.json  lte_5_cmos_api_48_8_7.json  lte_5_cmos_api_49_0_5.json  lte_5_cmos_api_67_1_1.json  lte_5_cmos_api_68_10_1.json  lte_5_cmos_api_68_5_0.json
filters/adrv9009/: Tx_BW100_IR122p88_Rx_BW100_OR122p88_ORx_BW100_OR122p88_DC122p88.txt  Tx_BW200_IR245p76_Rx_BW100_OR122p88_ORx_BW200_OR245p76_DC122p88.txt  Tx_BW200_IR245p76_Rx_BW200_OR245p76_ORx_BW200_OR245p76_DC122p88.txt  Tx_BW400_IR491p52_Rx_BW200_OR245p76_ORx_BW400_OR491p52_DC245p76.txt
glade/: AD5628_1.glade  AD7303.glade  ad6676.glade  ad7606x.glade  ad9081.glade  ad9084.glade  ad9371.glade  ad9371_adv.glade  ad9739a.glade  adrv9002.glade  adrv9009.glade  adrv9009_adv.glade  cf_axi_tdd.glade  cf_axi_tdd_v2.glade  cn0357.glade  cn0508.glade  cn0511.glade  cn0540.glade  daq2.glade  debug.glade  dmm.glade  fmcadc3.glade  fmcomms1.glade  fmcomms11.glade  fmcomms2.glade  fmcomms2_adv.glade  fmcomms5.glade  fmcomms6.glade  generic_dac.glade  generic_plugin.glade  lidar.glade  motor_control.glade  osc.glade  oscplot.glade  pr_config.glade  scpi.glade  spectrum_analyzer.glade  xmw.glade
glade-3-8/: osc.glade
ini/: ini.c
libini/: ini.h  libini.c
mat_files/: sinewave_0.3_2ch.mat  sinewave_0.6.mat  sinewave_0.6_2ch.mat  sinewave_0.9.mat
plugins/: AD5628_1.c  AD7303.c  CMakeLists.txt  ad6676.c  ad7606x.c  ad9081.c  ad9084.c  ad9361_multichip_sync.c  ad9361_multichip_sync.h  ad9371.c  ad9371_adv.c  ad9739a.c  adrv9002.c  adrv9009.c  adrv9009_adv.c  block_diagram.h  cf_axi_tdd.c  cn0357.c  cn0508.c  cn0511.c  cn0540.c  dac_data_manager.c  dac_data_manager.h  daq2.c  datafile_in.h  debug.c  dmm.c  fir_filter.c  fir_filter.h  fmcadc3.c  fmcomms1.c  fmcomms11.c  fmcomms2.c  fmcomms2_adv.c  fmcomms5.c  fmcomms6.c  generic_dac.c  generic_plugin.c  lidar.c  m2k_dac.c  (+7 more)
profiles/: AD-FMCADC2_test.ini  AD-FMCDAQ2_test.ini  AD-FMCDAQ3_test.ini  AD-FREQCVT1_test.ini  AD-FREQCVT1_test.ini.cmakein  AD-TRXBOOST1_test.ini  AD-TRXBOOST1_test.ini.cmakein  ADRV9363_test.ini  ADRV9371-W_test.ini  ADRV9371_test.ini  FMComms1_sweep_rx.ini  FMComms1_sweep_tx.ini  FMComms1_test.ini  FMComms2_sweep.ini  FMComms2_test.ini  FMComms4_sweep.ini  FMComms4_test.ini  FMComms5_test.ini  GSM.ini  LTE10.ini  LTE15.ini  LTE1p4.ini  LTE20.ini  LTE3.ini  LTE5.ini  PZSDR1_test.ini  PZSDR2_2400TDD_test.ini  PZSDR2_2400TDD_test.ini.cmakein  PZSDR2_test.ini  PZSDR_test.ini
waveforms/: 10.txt  11.txt  1M_10M_nyq.txt  LTE10.mat  LTE10.txt  LTE5.mat  LTE5.txt  Tx_10MHz_61.44Msps_PeakScaling3.0dBFS_ETM1.1_PAR7.5dB_Offset0MHz_4Carrier.txt  Tx_20MHz_61.44Msps_PeakScaling3.0dBFS_ETM1.1_PAR7.5dB_Offset0MHz.txt  chirp.mat  modem_qpsk_20MHz.mat  msk_20M.txt  qam16_20M.txt  qpsknofilt_30M.txt  qpskwithfilt_30.72M.txt  sinewave_0.3.mat  sinewave_0.9_2ch.mat
xmls/: ad9250.xml  ad9361-phy.xml  ad9361.xml  ad9517.xml  ad9523-lpc.xml  adf4351-tx-lpc.xml  adf4351.xml  adi_regmap_adc_v10.xml  adi_regmap_dac_v9.xml  cf-ad9122-core-lpc.xml  cf-ad9643-core-lpc.xml
(+1 files in other folders)
